[project]
requires-python = ">=3.9"

[tool.poetry]
name = "dvla_vehicle_enquiry_service"
version = "1.0.3"
description = "Python SDK for DVLA Vehicle Enquiry Service API"
authors = ["tigattack <10629864+tigattack@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
packages = [
    {include = "dvla_vehicle_enquiry_service"}
]

[tool.poetry.urls]
Repository = "https://github.com/tigattack/dvla-ves-api-py"
Issues = "https://github.com/tigattack/dvla-ves-api-py/issues"
Changelog = "https://github.com/tigattack/dvla-ves-api-py/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "3.9.5"
pydantic = "^2.8.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
ruff = "^0.6.1"
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
python-dateutil = "^2.9.0-post.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
disable_error_code = "import-untyped"

[tool.ruff.lint]
extend-select = ["UP", "PLR"]
ignore = ["PLR2004"]
